--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
 
 												<!-- Begin submenu (submenu master)
 												==================================== -->
-												<li><a href="Index.html">Home</a></li>
+												<li><a href="index.html">Home</a></li>
 												<!-- End submenu (sub-master) -->
 
 												<!-- Begin submenu (submenu master)
