--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<!-- Begin logo 
 							================ -->
 							<div class="tt-logo"> 
-								<a href="Index.html">
+								<a href="index.html">
 									<!-- Hint: You may need to change the img height to match your logo type. You can do this from the "theme.css" file (find: ".tt-logo img"). -->
 									<img src="assets/img/Favicon.png" class="tt-logo-light magnetic-item" alt="Logo"> <!-- logo light -->
 									<img src="assets/img/Favicon Dark.png" class="tt-logo-dark magnetic-item" alt="Logo"> <!-- logo dark -->
@@ -145,7 +145,7 @@
 
 												<!-- Begin submenu (submenu master)
 												==================================== -->
-												<li><a href="Index.html">Home</a></li>
+												<li><a href="index.html">Home</a></li>
 												<!-- End submenu (sub-master) -->
 
 												<!-- Begin submenu (submenu master)
