--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 									* Adjust the "data-scroll-speed" attribute to find a suitable scrolling speed (no effect on mobile devices!).
 									-->
 									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="3">
-										<a href="single-project-1.html" class="pi-item-title-link">
+										<a href="https://www.behance.net/vishalarora12" class="pi-item-title-link">
 											<h2 class="pi-item-title">Victorian Girls</h2>
 											<div class="pi-item-hover-title">Victorian Girls</div>
 										</a>
@@ -329,7 +329,7 @@
 									* Adjust the "data-scroll-speed" attribute to find a suitable scrolling speed (no effect on mobile devices!).
 									-->
 									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="2">
-										<a href="single-project-2.html" class="pi-item-title-link">
+										<a href="https://www.behance.net/vishalarora12" class="pi-item-title-link">
 											<h2 class="pi-item-title">Smithy</h2>
 											<div class="pi-item-hover-title">Smithy</div>
 										</a>
@@ -348,7 +348,7 @@
 									* Adjust the "data-scroll-speed" attribute to find a suitable scrolling speed (no effect on mobile devices!).
 									-->
 									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="3">
-										<a href="single-project-3.html" class="pi-item-title-link">
+										<a href="https://www.behance.net/vishalarora12" class="pi-item-title-link">
 											<h2 class="pi-item-title">Fashion Week</h2>
 											<div class="pi-item-hover-title">Fashion Week</div>
 										</a>
@@ -370,7 +370,7 @@
 									* Adjust the "data-scroll-speed" attribute to find a suitable scrolling speed (no effect on mobile devices!).
 									-->
 									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="3">
-										<a href="single-project-4.html" class="pi-item-title-link">
+										<a href="https://www.behance.net/vishalarora12" class="pi-item-title-link">
 											<h2 class="pi-item-title">Mystery Forest</h2>
 											<div class="pi-item-hover-title">Mystery Forest</div>
 										</a>
@@ -389,7 +389,7 @@
 									* Adjust the "data-scroll-speed" attribute to find a suitable scrolling speed (no effect on mobile devices!).
 									-->
 									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="3">
-										<a href="single-project-5.html" class="pi-item-title-link">
+										<a href="https://www.behance.net/vishalarora12.html" class="pi-item-title-link">
 											<h2 class="pi-item-title">Red Package</h2>
 											<div class="pi-item-hover-title">Red Package</div>
 										</a>
