--- a/portfolio.html
+++ b/portfolio.html
@@ -230,7 +230,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-1.html" data-title="Victorian Girls" data-category="People">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12" data-title="Victorian Girls" data-category="People">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/portfolio-1.jpg" data-src="assets/img/portfolio-1.jpg" alt="Image">
@@ -243,7 +243,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-2.html" data-title="Smithy" data-category="Creative">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12" data-title="Smithy" data-category="Creative">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/portfolio-2 (1).jpg" data-src="assets/img/portfolio-2 (1).jpg" alt="Image">
@@ -256,7 +256,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-3.html" data-title="Fashion Week" data-category="People">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12" data-title="Fashion Week" data-category="People">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<video class="tt-bg-video" loop muted preload="metadata" poster="assets/vids/fashion-week.jpg">
@@ -272,7 +272,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-4.html" data-title="Mystery Forest" data-category="Nature">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12" data-title="Mystery Forest" data-category="Nature">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/portfolio-3.jpg" data-src="assets/img/portfolio-3.jpg" alt="Image">
@@ -285,7 +285,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-5.html" data-title="Red Package" data-category="Branding">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12" data-title="Red Package" data-category="Branding">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/portfolio-4 (1).jpg" data-src="assets/img/portfolio-4 (1).jpg" alt="Image">
@@ -306,7 +306,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-7.html" data-title="Breaking Wave" data-category="Nature">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12.html" data-title="Breaking Wave" data-category="Nature">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/portfolio-5.jpg" data-src="assets/img/portfolio-5.jpg" alt="Image">
@@ -327,7 +327,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="single-project-9.html" data-title="Elegant Stoves" data-category="Creative">
+									<div class="swiper-slide" data-url="https://www.behance.net/vishalarora12" data-title="Elegant Stoves" data-category="Creative">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-3" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/portfolio-8.jpg" data-src="assets/img/portfolio-8.jpg" alt="Image">
