--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							Use class "max-width-*" to set caption max width if needed. For example "max-width-1000". More info about helper classes can be found in the file "helper.css".
 							-->
 							<div class="ph-caption max-width-1000">
-								<h1 class="ph-caption-title ph-appear font-normal"><em>Hello stranger!</em><br> I'm Vishal, a Crative designer agency based in Gurgaon. I'll bring your <em><u>ideas</u></em> to life.</h1>
+								<h1 class="ph-caption-title ph-appear font-normal"><em>Hello stranger!</em><br> I'm Vishal, a Crative designer based in Gurgaon. I'll bring your <em><u>ideas</u></em> to life.</h1>
 								<div class="ph-caption-title-ghost ph-appear">Hello!</div>
 								<!-- <div class="ph-caption-subtitle ph-appear">Subtitle</div> -->
 							</div> 
