--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
 	<head>
 
 		<!-- Title -->
-		<title>Potfolio - Vishal Adhlakha</title>
+		<title>Portfolio - Vishal Adhlakha</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
-		<meta name="description" content="Potfolio - Vishal Adhlakha">
+		<meta name="description" content="Portfolio - Vishal Adhlakha">
 		<meta name="author" content="Vishal Adhlakha">
 
 		<!-- Mobile Meta -->
